sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: type inverse
  var Boolean: inverse=true 
               ^AlgBubbleSort1:5: error: not found: value inverse
   		inverse=false;
                ^AlgBubbleSort1:9: error: not found: value inverse
   		          inverse = true;
                          ^AlgBubbleSort1:12: error: not found: value inverse
   	}while(inverse==true)
               ^